--- a/styles.css
+++ b/styles.css
@@ -33,19 +33,20 @@ body {
 }
 
 header {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 h1 {
     color: var(--yellow);
     font-size: 3em;
-    font-weight: 700;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 h4 {
     color: var(--base1);
     font-size: 1.1em;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 a {
@@ -63,10 +64,12 @@ a:hover {
     flex-direction: column;
     align-items: center;
     background-color: var(--base02);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
 }
 
 .timer-div {
@@ -78,10 +81,10 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px auto;
     font-size: 2.5em;
     border: 4px solid var(--base01);
     box-shadow: 0 0 10px var(--base00);
+    margin: 20px 0;
 }
 
 .timer {
@@ -94,8 +97,23 @@ a:hover {
     color: var(--base1);
     padding: 15px;
     border-radius: 5px;
-    margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.session, .break {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.time-length, .break-length {
+    font-size: 2em;
+    margin: 10px 0;
+    color: var(--base1);
 }
 
 .buttons {
@@ -114,6 +132,7 @@ a:hover {
     font-size: 1.2em;
     transition: background-color 0.3s, transform 0.3s;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 .buttons button:hover {
